--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,14 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// 레디스 관련 설정
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	//implementation 'org.springframework.session:spring-session-data-redis'
 	// 웹소켓 관련 설정
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
+	implementation 'org.webjars:webjars-locator-core'
+	implementation 'org.webjars:sockjs-client:1.0.2'
+	implementation 'org.webjars:stomp-websocket:2.3.3'
 }
 
 tasks.named('test') {
